@@ -197,8 +197,14 @@ local_restore() {
                         # do with the ones we have
 
                         # the first one is the one without suffix
+                        # or it has a suffix, indicating the
+                        # file should be deleted
                         if [[ $monthday -eq 0 ]]; then
-                                print_file_status 0
+                                echo "${_path[0]}" >&2
+                                if [[ ! "${_path[0]}" =~ "(.+)\\+(..)\\.(..):(..)$" ]]; then
+                                        # no suffix
+                                        print_file_status 0
+                                fi
                                 i=0; store $i
                                 continue
                         fi
@@ -255,7 +261,10 @@ local_restore() {
         done
         # this is need for the last file we've just read
         if [[ $monthday -eq 0 ]]; then
-                print_file_status 0
+                if [[ ! "${_path[0]}" =~ "(.+)\\+(..)\\.(..):(..)$" ]]; then
+                        # no suffix
+                        print_file_status 0
+                fi
                 clean_exit
         fi
         if [[ $monthday -gt ${_month[$i]} ]]; then
