@@ -12,6 +12,7 @@ xx May 2006: 0.2.12 Miek <miek@miek.nl>
    * doc: added quick-start tex document for SANE
    * doc: poster/ directory was added for SANE
    * doc: more updates (Bram de Kruijff)
+   * monthday.sh: with +0 don't print files with a suffic (Bram de Kruijff)
 
 
 05 May 2006: 0.2.11 Miek <miek@miek.nl>
